[package]
name = "huffman_coding"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {version = "0.17.1", features = ["serde"]}
serde = {version = "1.0.63", features = ["derive"]}