[package]
name = "huffman_coding"
version = "0.1.0"
authors = ["FlyingCanoe <FlyingCanoe@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[[bin]]
name="perf"
path="examples/perf.rs"


[dependencies]
rustc-hash = "1.1.0"
bincode = "1.2.1"
anyhow = "1.0.28"
bitvec = {version = "0.17.1", features = ["serde"]}
serde = {version = "1.0.63", features = ["derive"]}
unicode-normalization = "0.1.12"